# weather-travel-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
demo/: README.md  ui_gradio.py
src/weather_travel_agent/: __init__.py  main.py
src/weather_travel_agent/agent/: conditions.py  types.py
src/weather_travel_agent/agent/nodes/: extract_cities.py  gather_trip.py  get_directions.py  get_weather.py  share_forecast.py
src/weather_travel_agent/handlers/: a2a.py
src/weather_travel_agent/models/: chat.py  config.py
tests/unit/agent/nodes/: test_share_forecast.py
